[package]
name = "actix_channels"
version = "0.1.1"
authors = ["Lex Childs <lexchilds@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4"
actix-web-actors = "3"
actix-rt = "1"
actix = "0.10"
rand = "0.8"
bytes = "0.5"
async-trait="0.1"
